syntax = "proto3";

option go_package = "./;proto";

package proto;

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

message SignInInput {
  string Mail = 1;
  string Password = 2;
}

message SignUpInput {
  string Name = 1;
  string Mail = 2;
  string Password = 3;
  string InvitedBy = 4;
}

message Cookie {
  string Cookie = 1;
}

message UserId {
  int64 Id = 1;
  Cookie Cookie = 2;
}

message Empty {

}

service Authorization {
  rpc LogInAdmin(SignInInput) returns(Cookie) {}
  rpc SignUp(SignUpInput) returns(UserId) {}
  rpc SignIn(SignInInput) returns(Cookie) {}
  rpc LogOut(Cookie) returns(Empty) {}
}
